Fixed colour contrast for button

--- a/Jerry/css/style.css
+++ b/Jerry/css/style.css
@@ -118,7 +118,7 @@ h3{
 
 
 .card .button:hover {
-	background-color: #4CAF50;
+	background-color: #30872C;
 	color: white;
 	border-radius: 2px;
 
